t2.txt

tests\test_error_use_after_move.kix:
error: Use of uninitialized or moved variable 'd'
  --> tests\test_error_use_after_move.kix:0
   |
 0 | // test_error_use_after_move.kix
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  1 error(s) in Borrow Checker

error[E0000]: aborting due to previous error(s)
  Kinetix v0.0.7 (Dev)
  For more information, open an issue: https://github.com/MisterY3515/Kinetix/issues

